# video-thumbnail-maker

./: CHANGELOG.md  README.md  README.zh-CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
src/components/: AppHeader.tsx  DependencyCheck.tsx  ErrorBoundary.tsx  FileDropOverlay.tsx  FileDropZone.tsx  LanguageToggle.tsx  MainContainer.tsx  OutputLocation.tsx  ProcessButton.tsx  ProcessingList.tsx  ProcessingListButton.tsx  ProcessingListItem.tsx  ThemeToggle.tsx  VideoSettings.tsx
src/components/ui/: checkbox.tsx
src/i18n/: i18next.ts  index.ts
src/store/: index.ts
