[package]
name = "video-thumbnail-maker"
version = "1.3.0"
description = "A simple and easy-to-use video thumbnail generator that quickly extracts multiple frames from videos and generates preview images."
authors = ["yc-w-cn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "video_thumbnail_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tempfile = "3.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
ffmpeg-sidecar = "2.0.5"
regex = "1.11.1"

